@@ -1,3 +1,7 @@
+2016-10-04  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
+
+	* retries 3 times when socket get stuck
+
 2016-07-23  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
 
 	* try to connect multiple times before giving up
